Update 1.09 Understand and apply risk management concepts.md

--- a/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.09 Understand and apply risk management concepts.md
@@ -635,3 +635,183 @@ Regular updating of risk reports ensures that the information remains current an
 
 ## 1.9.8 Continuous improvement (e.g., risk maturity modeling) ##
 
+Risk analysis serves to inform upper management about risk mitigation strategies, such as transferring, deterring, avoiding, or accepting risks, by comparing the cost of potential asset loss with safeguard deployment costs. It identifies and quantifies risks, aiding in security budgeting and alignment with business goals. Risk assessments must be periodically updated to accommodate evolving threats and vulnerabilities, supporting continuous improvement. Evaluating enterprise risk management using the Risk Maturity Model (RMM) assesses key indicators and activities for a mature, sustainable risk management process, typically categorized into five levels: 
+
+- ad hoc: this is caos
+- preliminary: first unordered attempts to follow risk management processes
+- defined: a common standard or framework is shared and adopted across the organization
+- integrated: risk management is baked in business processes, metrics and KRI (Key Risk Indicators) are in use
+- optimized: risk management becomes proactive
+
+```mermaid
+flowchart TD
+  A[Risk Analysis] --> B[Identify & quantify risks]
+  B --> C[Compare potential asset loss vs. safeguard cost]
+  C --> D{Management decisions}
+  D -->|Transfer/Deterrence/Avoid/Acept| E[Select mitigation strategy]
+  E --> F[Inform budget & align with business goals]
+
+  F --> G[Track & Update Risk Assessments periodically]
+  G --> H[Continuous Improvement in Risk Posture]
+
+  F --> I[Evaluate ERM effectiveness via RMM]
+  I --> J{Determine maturity level}
+  J --> L[Ad Hoc: chaotic]
+  J --> M[Preliminary: initial, siloed]
+  J --> N[Defined: framework adopted]
+  J --> O[Integrated: metrics & KRIs core]
+  J --> P[Optimized: proactive, strategic]
+
+  J --> Q[Use RMM to track progress over time]
+  Q --> H
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+EOL, or end of life, marks the cessation of manufacturing, marketing, and sales of equipment by the OEM. Following EOL, limited development of firmware and software updates occurs, with post-warranty maintenance available at a higher cost for a limited period. EOS, or end of sale, is the point at which the OEM stops selling the equipment, often used interchangeably with EOL. 
+EOSL, or end of service life/end of support life, signifies the end of all support services and updates from the OEM.
+While EOL and EOSL dates may prompt concerns, they do not guarantee imminent failure or performance decline of equipment. Assessing current system performance and exploring alternative support options beyond the OEM can be beneficial. Third-party maintenance providers may offer cost-effective solutions, ensuring continued equipment functionality for years beyond EOL or EOSL.
+
+### Open Questions ###
+
+1. What is the purpose of risk analysis in relation to IT security?
+<details>
+  <summary>Show answer</summary>
+Risk analysis informs upper management about potential security risks and mitigation strategies. It quantifies risks, allowing for cost-benefit analysis of safeguard deployment versus potential asset loss, and facilitates informed decision-making regarding risk acceptance, avoidance, deterrence, or transfer.
+</details>
+
+2. Explain the importance of regularly updating risk assessments.
+<details>
+  <summary>Show answer</summary>
+Regularly updating risk assessments is essential to address evolving threats and vulnerabilities. As the technological landscape changes, new attack vectors emerge, and existing vulnerabilities become more exploitable. Keeping risk assessments current ensures appropriate security measures are in place.
+</details>
+
+3. Describe the five levels of the Risk Maturity Model (RMM).
+<details>
+  <summary>Show answer</summary>
+The Risk Maturity Model (RMM) categorizes risk management processes into five levels: (1) Ad hoc: informal and reactive; (2) Preliminary: basic risk identification; (3) Defined: standardized processes; (4) Integrated: risk management aligned with business goals; (5) Optimized: continuous improvement and proactive risk management.
+</details>
+
+4. Why do legacy devices pose security risks?
+<details>
+  <summary>Show answer</summary>
+Legacy devices pose security risks due to the lack of vendor support, leaving them vulnerable to newly discovered exploits. Without security updates and patches, these devices become easy targets for attackers.
+</details>
+
+5. What are the key distinctions between EOL and EOSL?
+<details>
+  <summary>Show answer</summary>
+EOL (End of Life) marks the cessation of manufacturing, marketing, and sales of a product by the OEM. EOSL (End of Service Life) signifies the termination of all support services, including updates and patches.
+</details>
+
+6. What happens to firmware and software updates after a device reaches EOL?
+<details>
+  <summary>Show answer</summary>
+After a device reaches EOL, development of firmware and software updates becomes limited. Post-warranty maintenance may be available at a higher cost for a limited time.
+</details>
+
+7. What does the term EOS typically indicate?
+<details>
+  <summary>Show answer</summary>
+EOS (End of Sale) typically indicates the point at which the OEM stops selling the equipment. It's often used interchangeably with EOL.
+</details>
+
+8. Do EOL and EOSL dates necessarily mean immediate equipment failure?
+<details>
+  <summary>Show answer</summary>
+EOL and EOSL dates do not necessarily guarantee immediate equipment failure. While the risk of failure increases over time, well-maintained equipment may continue to function effectively.
+</details>
+
+9. What options exist for supporting equipment beyond OEM support?
+<details>
+  <summary>Show answer</summary>
+Beyond OEM support, options for supporting equipment include self-maintenance, engaging third-party maintenance providers, or using open-source alternatives for software and firmware.
+</details>
+
+10. What potential benefits can third-party maintenance providers offer?
+<details>
+  <summary>Show answer</summary>
+Third-party maintenance providers can offer cost-effective solutions for maintaining equipment functionality beyond EOL or EOSL. They may provide access to expertise, spare parts, and ongoing maintenance services.
+</details>
+
+---
+
+## 1.9.9 Risk frameworks (e.g., International Organization for Standardization (ISO), National Institute of Standards and Technology (NIST), Control Objectives for Information and Related Technology (COBIT), Sherwood Applied Business Security Architecture (SABSA), Payment Card Industry (PCI)) ##
+
+A risk framework serves as a structured approach outlining how risks are assessed, addressed, and monitored. Notably, NIST has established two pivotal frameworks: the Risk Management Framework (RMF) and the Cybersecurity Framework (CSF). The CSF provides guidelines for mitigating cybersecurity risks within organizations, drawing upon existing standards, guidelines, and practices. On the other hand, the RMF functions as a risk management process designed to identify and respond to threats, delineated across three core Special Publications: SP 800-37 Rev 2, SP 800-39, and SP 800-30 Rev 1. The RMF encompasses seven steps and six cyclical phases, beginning with preparation at both organizational and system levels and culminating in continuous monitoring to assess control effectiveness and report on the system's security and privacy posture.
+
+:link: The NIST Risk Management Framework (RMF) provides a process that integrates security, privacy, and cyber supply chain risk management activities into the system development life cycle: https://csrc.nist.gov/projects/risk-management/about-rmf
+
+The CSF revolves around a core framework comprising five functions: Identify, Protect, Detect, Respond, and Recover. Rather than a mere checklist or procedural guide, it serves as a directive for ongoing operational activities aimed at enhancing security progressively. Rather than constituting a standalone risk management process or security infrastructure, the CSF functions as an enhancement system.
+
+The following table recaps some Risk Management Frameworks you should remember:
+
+| Framework                  | Description                                                                                                   |
+|---------------------------|---------------------------------------------------------------------------------------------------------------|
+| **NIST SP 800‑37**        | Describes the **Risk Management Framework (RMF)** and provides structured guidelines to identify, assess, select, implement, and continuously monitor controls across information systems and organizations. |
+| **ISO 31000**             | A family of international standards offering a principles-based, enterprise-wide approach for managing *any type of risk*. Widely applicable across industries and focuses on integrating risk management into governance and operations. |
+| **COSO ERM**              | Defines essential enterprise risk management components, principles, and concepts. Frequently used to align governance, risk, and performance at the board and organizational level, especially in regulated industries. |
+| **ISACA Risk IT Framework** | Provides a structured methodology to identify, manage, and optimize IT-related risk tied to enterprise value. Closely aligned with COBIT and focused on integrating business context, risk appetite, and decision-making. |
+
+### Open Questions ###
+
+1. What is the primary purpose of a risk framework?
+<details>
+  <summary>Show answer</summary>
+A risk framework provides a structured approach for assessing, addressing, and monitoring risks.
+</details>
+
+2. Differentiate between the NIST RMF and CSF in terms of their focus and application.
+<details>
+  <summary>Show answer</summary>
+The RMF is a comprehensive risk management process focused on identifying and responding to threats, while the CSF provides guidelines specifically for mitigating cybersecurity risks.
+</details>
+
+3. Outline the seven steps involved in the NIST RMF process.
+<details>
+  <summary>Show answer</summary>
+The seven steps of the RMF are: Prepare, Categorize, Select, Implement, Assess, Authorize, and Monitor.
+</details>
+
+4. Describe the core functions that constitute the NIST CSF.
+<details>
+  <summary>Show answer</summary>
+The five core functions of the CSF are: Identify, Protect, Detect, Respond, and Recover.
+</details>
+
+5. Why is the NIST CSF considered more of a directive than a checklist?
+<details>
+  <summary>Show answer</summary>
+The CSF emphasizes ongoing operational activities for continuous security enhancement rather than a static set of procedures.
+</details>
+
+6. Explain the role of continuous monitoring within the NIST RMF.
+<details>
+  <summary>Show answer</summary>
+Continuous monitoring ensures the effectiveness of security controls and provides insights into the system's security and privacy posture.
+</details>
+
+7. What is the significance of Special Publications 800-37, 800-39, and 800-30 in the context of the RMF?
+<details>
+  <summary>Show answer</summary>
+These Special Publications provide detailed guidance on implementing the RMF, managing risk, and conducting risk assessments, respectively.
+</details>
+
+8. How does the NIST RMF integrate security, privacy, and cyber supply chain risk management?
+<details>
+  <summary>Show answer</summary>
+The RMF considers these three aspects throughout the system development life cycle, ensuring a holistic approach to risk management.
+</details>
+
+9. Briefly describe the purpose and scope of the ISO 31000 framework.
+<details>
+  <summary>Show answer</summary>
+ISO 31000 offers a set of standards and guidelines for establishing and implementing effective risk management practices across various industries and organizations.
+</details>
+
+10. What is the key feature that aligns the ISACA Risk IT Framework with COBIT?
+<details>
+  <summary>Show answer</summary>
+The alignment with COBIT ensures that the ISACA Risk IT Framework leverages best practices in IT governance and management for risk optimization and security.
+</details>
