Update 1.11 Apply supply chain risk management (SCRM) concepts.md

--- a/DOMAIN1: Security and Risk Management/1.11 Apply supply chain risk management (SCRM) concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.11 Apply supply chain risk management (SCRM) concepts.md
@@ -4,3 +4,5 @@
 
 Hardware, software, and services are associated with various risks that can impact organizational security and operations. Supply Chain Risk Management (SCRM) is crucial for ensuring the reliability, trustworthiness, and integrity of all vendors or links in the supply chain. Each link should be accountable and transparent, disclosing their practices and security requirements to their business partners. Proper organization, documentation, management, and auditing of each handoff in the supply chain are essential. The ultimate goal of a secure supply chain is to guarantee that the final product meets quality, performance, and security standards without any compromise or unauthorized manipulation throughout the process. However, the supply chain itself can pose a threat vector, as materials, software, hardware, or data obtained from trusted sources may have been compromised or manipulated maliciously.
 
+:link: Refer also to: https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#132-organizational-processes-eg-acquisitions-divestitures-governance-committees
+
