Update 1.11 Apply supply chain risk management (SCRM) concepts.md

--- a/DOMAIN1: Security and Risk Management/1.11 Apply supply chain risk management (SCRM) concepts.md
+++ b/DOMAIN1: Security and Risk Management/1.11 Apply supply chain risk management (SCRM) concepts.md
@@ -4,5 +4,126 @@
 
 Hardware, software, and services are associated with various risks that can impact organizational security and operations. Supply Chain Risk Management (SCRM) is crucial for ensuring the reliability, trustworthiness, and integrity of all vendors or links in the supply chain. Each link should be accountable and transparent, disclosing their practices and security requirements to their business partners. Proper organization, documentation, management, and auditing of each handoff in the supply chain are essential. The ultimate goal of a secure supply chain is to guarantee that the final product meets quality, performance, and security standards without any compromise or unauthorized manipulation throughout the process. However, the supply chain itself can pose a threat vector, as materials, software, hardware, or data obtained from trusted sources may have been compromised or manipulated maliciously.
 
-:link: Refer also to: https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#132-organizational-processes-eg-acquisitions-divestitures-governance-committees
+:link: Refer also to 1.3.2 Organizational Processes: https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN1%3A%20Security%20and%20Risk%20Management/1.03%20Evaluate%2C%20apply%2C%20and%20sustain%20security%20governance%20principles.md#132-organizational-processes-eg-acquisitions-divestitures-governance-committees
 
+### Open Questions ###
+1. What are the three primary components associated with supply chain risks?
+<details>
+  <summary>Show answer</summary>
+The three primary components associated with supply chain risks are hardware, software, and services.
+</details>
+
+2. What is the core objective of Supply Chain Risk Management (SCRM)?
+<details>
+  <summary>Show answer</summary>
+The core objective of Supply Chain Risk Management (SCRM) is to ensure the reliability, trustworthiness, and integrity of all vendors and links within the supply chain.
+</details>
+
+3. Explain the concept of accountability and transparency in the context of SCRM.
+<details>
+  <summary>Show answer</summary>
+Accountability in SCRM means each link in the chain takes responsibility for their actions and their security practices. Transparency requires that they openly share these practices and security requirements with their business partners.
+</details>
+
+4. Why is proper documentation and management crucial for each stage of the supply chain?
+<details>
+  <summary>Show answer</summary>
+Proper documentation and management at each stage provide a clear audit trail, enabling organizations to track materials and identify potential points of compromise. This facilitates effective risk assessment and incident response.
+</details>
+
+5. What is the ultimate goal of a secure supply chain?
+<details>
+  <summary>Show answer</summary>
+"Preponderance of evidence" means the evidence presented is more convincing than the opposing side's, which is the standard for winning a civil case.
+</details>
+
+6. Describe how the supply chain itself can become a threat vector.
+<details>
+  <summary>Show answer</summary>
+The supply chain itself can become a threat vector if materials, software, hardware, or data obtained from seemingly trusted sources have been compromised or maliciously manipulated at any point before reaching the end user.
+</details>
+
+7. What types of materials could be compromised in a supply chain attack?
+<details>
+  <summary>Show answer</summary>
+A wide range of materials could be compromised in a supply chain attack, including raw materials, manufactured components, software packages, hardware devices, and sensitive data.
+</details>
+
+8. Why is trust not sufficient to guarantee security in a supply chain?
+<details>
+  <summary>Show answer</summary>
+Trust alone is not sufficient because even trusted sources can be unwittingly compromised. SCRM emphasizes verification and validation at each stage to ensure the integrity of all components.
+</details>
+
+9. How does SCRM help organizations mitigate the risks associated with third-party vendors?
+<details>
+  <summary>Show answer</summary>
+SCRM helps organizations mitigate risks associated with third-party vendors by establishing clear security standards, conducting due diligence on vendors, monitoring their practices, and implementing controls to minimize the impact of potential compromises.
+</details>
+
+---
+
+## 1.11.2 Risk mitigations (e.g., third-party assessment and monitoring, minimum security requirements, service level requirements, silicon root of trust, physically unclonable function, software bill of materials) ##
+
+Third-party assessment and monitoring are essential steps for organizations before engaging in business partnerships. Conducting due diligence through third-party assessments aids in gathering pertinent information for evaluation. On-site assessments provide valuable insights into physical security and operational practices, while thorough document reviews help assess architecture, designs, policies, and procedures. Understanding the current environment's state is crucial for identifying any compliance issues or shortcomings prior to integrating IT infrastructures. The level of access and depth of information obtained during assessments typically align with the closeness of the partnership. Establishing minimum security requirements is a fundamental aspect of the assessment process, which may involve adapting existing security requirements or establishing new ones. Similarly, reviewing Service Level Agreements (SLAs) ensures alignment with internal operations, customer expectations, and partner agreements. Harmonizing SLAs with established standards may require time and coordination, especially in cases where the acquiring company must support existing SLAs until they expire or undergo renewal.
+
+The **Silicon Root of Trust** refers to a hardware-based security feature embedded in the silicon (microchip) of a device. It is the foundational trust anchor that is critical for secure booting, key storage, and cryptographic operations. The RoT is used to verify the integrity of the firmware and software during the boot process to ensure that they have not been tampered with. Since it is hardware-based, it is considered highly resistant to tampering or attacks compared to software-based trust mechanisms.
+
+A **Physically Unclonable Function (PUF)** is a hardware-based security feature that takes advantage of the inherent physical differences in manufacturing processes to create unique identifiers. These differences are not reproducible, meaning that no two PUFs are identical, even if they come from the same production line. A PUF can generate a unique cryptographic key or challenge-response pair based on these physical properties, making it highly secure for applications such as device authentication or encryption key generation.
+
+A **Software Bill of Materials (SBOM)** is a comprehensive list or inventory of all the components (e.g., libraries, frameworks, modules) included in a piece of software. It provides transparency into the software supply chain, helping organizations track vulnerabilities and dependencies across different software components. The SBOM is critical for assessing the security posture of software, as it allows for identifying vulnerable or outdated libraries, ensuring that only trusted and secure components are included
+
+### Open Questions ###
+1. Why are third-party assessments important before engaging in business partnerships?
+<details>
+  <summary>Show answer</summary>
+Third-party assessments are crucial for gathering information about potential partners and evaluating their security practices. This helps organizations identify potential risks and ensure compatibility before entering into a business relationship.
+</details>
+
+2. What are two methods of conducting third-party assessments, and what type of information does each method gather?
+<details>
+  <summary>Show answer</summary>
+Two methods are on-site assessments, which offer insights into physical security and operational practices, and document reviews, which help assess architecture, designs, policies, and procedures.
+</details>
+
+3. What is the purpose of understanding the current state of a potential partner's environment?
+<details>
+  <summary>Show answer</summary>
+Understanding the current environment helps identify compliance issues or shortcomings in the potential partner's security posture, which can be addressed before integration.
+</details>
+
+4. How does the closeness of a partnership impact the level of access and information obtained during assessments?
+<details>
+  <summary>Show answer</summary>
+Closer partnerships typically necessitate deeper levels of access and more comprehensive information sharing during assessments due to the increased interconnectivity and potential risks involved.
+</details>
+
+5. Why is establishing minimum security requirements a crucial part of the assessment process?
+<details>
+  <summary>Show answer</summary>
+Establishing minimum security requirements ensures that the partner meets a baseline level of security, minimizing the risk of vulnerabilities affecting the organization. These requirements may involve adapting existing standards or creating new ones.
+</details>
+
+6. What considerations should be made when reviewing Service Level Agreements (SLAs) as part of third-party assessments?
+<details>
+  <summary>Show answer</summary>
+SLAs should align with internal operations, customer expectations, and partner agreements. Consideration must be given to existing SLAs of the partner and the potential need to support them until expiration or renewal.
+</details>
+
+7. What challenges might arise when harmonizing SLAs with established standards?
+<details>
+  <summary>Show answer</summary>
+Harmonizing SLAs may require significant time and coordination, particularly when existing SLAs must be honored, potentially leading to delays in full integration.
+</details>
+
+8. What is the importance of document reviews in third-party assessments?
+<details>
+  <summary>Show answer</summary>
+Document reviews are essential for assessing the architectural design, policies, and procedures of the potential partner, providing valuable insights into their security practices and compliance posture.
+</details>
+
+9. How do on-site assessments contribute to the overall understanding of a potential partner's security posture?
+<details>
+  <summary>Show answer</summary>
+On-site assessments allow for direct observation of the physical security measures and operational practices of the potential partner, offering a more comprehensive understanding of their real-world security posture.
+</details>
