Update 1.12 Establish and maintain a security awareness, education, and training program.md

--- a/DOMAIN1: Security and Risk Management/1.12 Establish and maintain a security awareness, education, and training program.md
+++ b/DOMAIN1: Security and Risk Management/1.12 Establish and maintain a security awareness, education, and training program.md
@@ -47,3 +47,16 @@ Operational security tests can include phishing simulations, tailgating exercise
   <summary>Show answer</summary>
 Security champions are individuals within teams who promote security awareness, address concerns, and help develop team members' security skills. They act as liaisons between security teams and employees.
 </details>
+
+---
+
+## 1.12.2 Periodic content reviews to include emerging technologies and trends (e.g., cryptocurrency, artificial intelligence (AI), blockchain) ##
+
+Given the complexity of threats, effective training must be both pertinent and engaging. This necessitates regular updates to training materials and the methods used for testing and evaluation. Simply repeating the same phishing test campaign or utilizing identical approaches for security assessments lacks effectiveness. This principle extends to other training materials as well. Rather than solely relying on extensive security documentation, consider leveraging internal social media platforms, videos, and interactive campaigns to enhance training and awareness efforts.
+
+---
+
+## 1.12.3 Program effectiveness evaluation ##
+
+Allocating resources, including both time and finances, is essential for assessing the effectiveness of the company's security awareness and training initiatives. Key performance indicators, such as the percentage of employees clicking on simulated phishing campaign links, should be diligently monitored. It's crucial to analyze whether the awareness and training efforts are successfully reducing these clicks over time. If not, a reassessment of the strategies may be warranted.
+
