Update 1.12 Establish and maintain a security awareness, education, and training program.md

--- a/DOMAIN1: Security and Risk Management/1.12 Establish and maintain a security awareness, education, and training program.md
+++ b/DOMAIN1: Security and Risk Management/1.12 Establish and maintain a security awareness, education, and training program.md
@@ -4,11 +4,27 @@ Before initiating actual training sessions, it is imperative to establish securi
 
 | Stage       | Objective & Scope |
 |-------------|-------------------|
-| **Awareness** | Establish a security mindset before formal training begins. New hires first need to **understand why security matters**—recognize threats like phishing, safe data handling (e.g. encryption), and physical asset protection. :contentReference[oaicite:1]{index=1} |
-| **Training**   | Once awareness is built, deliver **task-specific instruction** on job-related security practices and policy compliance. This is required for all new employees to meet standards and procedures. :contentReference[oaicite:2]{index=2} |
+| **Awareness** | Establish a security mindset before formal training begins. New hires first need to **understand why security matters**—recognize threats like phishing, safe data handling (e.g. encryption), and physical asset protection.|
+| **Training**   | Once awareness is built, deliver **task-specific instruction** on job-related security practices and policy compliance. This is required for all new employees to meet standards and procedures.|
 | **Education**  | Involves deeper, often role- or certification-based learning—ideal for individuals seeking career advancement or technical expertise beyond standard training. :contentReference[oaicite:3]{index=3} |
 
+:necktie: The final target of awarness, training and education is a change in user behaviour.
+
 Training should be mandatory and provided to both new hires and through regular sessions conducted yearly at a minimum. Additionally, routine operational security tests, including phishing simulations, tailgating exercises, and social engineering scenarios, are crucial for evaluating and enhancing security awareness. The concept of security champions has gained traction, designating individuals within teams to advocate for security measures, address areas requiring attention, and facilitate skill development among team members. Furthermore, gamification techniques are being employed to make training and education more engaging, incorporating elements like interactive games, score tracking, and rewards to incentivize participation and knowledge retention.
+
+:bulb: **Microtraining** delivers very short, focused learning modules—typically under 5 minutes—tailored to a single cybersecurity topic like phishing detection or password hygiene. These bite‑sized sessions boost engagement and retention, fit seamlessly into daily workflows, and are easy to update regularly. **Standard training** is longer and more structured—think multi-hour sessions or full courses that cover multiple topics in depth. While comprehensive, it often interrupts productivity, takes more resources to create and update, and is harder for learners to retain over time. For cybersecurity teams, microtraining is ideal for ongoing awareness reinforcement, rapid updates, just‑in‑time learning, and behavioral change. Standard training remains essential for onboarding, structured compliance, and foundational learning—but works best when complemented by microtraining to reinforce key concepts over time.
+
+Measuring the effectiveness of awareness, training, and education in cybersecurity involves combining real-world data, testing, and feedback. You begin with pre-and post-training assessments (knowledge checks and quizzes) to gauge improvement in employee understanding. Next, track behavioral metrics, like phishing simulation click rates, reporting frequency, and time to report—to see if learning results in safer actions over time. Finally, collect employee feedback and monitor security incident trends (e.g., number of breaches or policy violations) to understand how awareness and training impact real-world behavior and compliance.
+
+The following table recaps some ways effective in measuring Effectiveness of Awareness, Training & Education:
+
+| Focus Area          | How to Measure                                                   |
+|---------------------|------------------------------------------------------------------|
+| Knowledge Gain      | **Pre- and post-training quizzes:** measure score improvement     |
+| Behavior Change     | **Phishing simulation results:** click rate, report rate, time to report |
+| Engagement & Reach  | **Completion & participation rates:** percent of staff trained    |
+| Feedback & Perception | **Surveys / feedback forms** to assess relevance and confidence  |
+| Incident & Compliance Trends | **Security incident metrics:** number of breaches, policy violations over time |
 
 ### Open Questions ###
 
