--- a/DOMAIN 2: Asset Security/2.0 Preface.md
+++ b/DOMAIN 2: Asset Security/2.0 Preface.md
@@ -1,4 +1,4 @@
-## 2.0 Preface ##
+## Preface ##
 
 CISSP Domain 2 serves as a gateway to the world of Asset Management, encompassing crucial principles and practices that underpin effective cybersecurity strategies.
 The topics covered in this book transcend traditional boundaries, fostering communication between various domains such as privacy, cybersecurity, strategic planning, tactical execution, and operational management.
